[metadata]
name = zenofai
version = 0.1.0
author = Anuj Sadani
author_email = your-email@example.com
description = The Zen of GenAI, printed on import
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/zenofai
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
